--- a/Views/ConfigWindow.xaml
+++ b/Views/ConfigWindow.xaml
@@ -1,7 +1,8 @@
-﻿<Window
+﻿<Controls:MetroWindow
     x:Class="TeachingPlatformApp.Views.ConfigWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TeachingPlatformApp.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,11 +10,16 @@
     Width="525"
     Height="350"
     WindowStartupLocation="CenterScreen"
+    WindowState="Maximized"
     mc:Ignorable="d">
     <Window.Resources>
         <ResourceDictionary>
             <Style TargetType="ListBoxItem">
                 <Setter Property="FontSize" Value="20" />
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="VerticalAlignment" Value="Center" />
             </Style>
         </ResourceDictionary>
     </Window.Resources>
@@ -27,6 +33,33 @@
             <ListBoxItem Content="{Binding ComConfigName}" />
         </ListBox>
         <GridSplitter Grid.Column="1" Width="5" />
-        <Grid Grid.Column="2" />
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35" />
+                <RowDefinition Height="60" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="{Binding ComConfig.IpSelf, StringFormat=自身Ip:{0}}" />
+            <Button
+                Grid.Row="1"
+                Height="50"
+                Command="{Binding SaveCommand}"
+                Content="Save"
+                FontSize="20" />
+            <TextBox
+                x:Name="consoleTextBox"
+                Grid.Row="2"
+                MinHeight="60"
+                VerticalAlignment="Stretch"
+                Background="Black"
+                FontFamily="楷体"
+                FontSize="23"
+                Foreground="White"
+                ScrollViewer.CanContentScroll="True"
+                Text="{Binding ConfigString}"
+                TextWrapping="Wrap"
+                VerticalScrollBarVisibility="Auto" />
+        </Grid>
+
     </Grid>
-</Window>
+</Controls:MetroWindow>
