--- a/Controls/Flighter.xaml
+++ b/Controls/Flighter.xaml
@@ -1,24 +1,35 @@
-﻿<UserControl x:Class="TeachingPlatformApp.Controls.Flighter"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="1" d:DesignWidth="1">
+﻿<UserControl
+    x:Class="TeachingPlatformApp.Controls.Flighter"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="1"
+    d:DesignWidth="1"
+    mc:Ignorable="d">
     <Grid>
         <Canvas Margin="0,-26,0,0">
-            <Path Stroke="DodgerBlue" StrokeThickness="1" Fill="DodgerBlue">
+            <Path
+                Fill="DodgerBlue"
+                Stroke="DodgerBlue"
+                StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry Figures="M 0,0 L 7,25 25,40 -25 40 -7 25" />
                 </Path.Data>
             </Path>
-            <Path Stroke="DodgerBlue" StrokeThickness="1" Fill="DodgerBlue">
+            <Path
+                Fill="DodgerBlue"
+                Stroke="DodgerBlue"
+                StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry Figures="M 0,40 L -4,52 -12,52 -8,40" />
                 </Path.Data>
             </Path>
-            <Path Stroke="DodgerBlue" StrokeThickness="1" Fill="DodgerBlue">
+            <Path
+                Fill="DodgerBlue"
+                Stroke="DodgerBlue"
+                StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry Figures="M 0,40 L 4,52 12,52 8,40" />
                 </Path.Data>
