--- a/Controls/GridAxes.xaml
+++ b/Controls/GridAxes.xaml
@@ -1,17 +1,17 @@
-﻿<Grid x:Class="TeachingPlatformApp.Controls.GridAxes"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
-             mc:Ignorable="d" 
-             VerticalAlignment="Stretch" 
-            HorizontalAlignment="Stretch"            
-            >
-    <Canvas x:Name="labelCanvas" Margin="1">
-    </Canvas>
-    <Canvas x:Name="chartCanvas" Margin="21" 
-                VerticalAlignment="Stretch" 
-                HorizontalAlignment="Stretch">
-    </Canvas>
+﻿<Grid
+    x:Class="TeachingPlatformApp.Controls.GridAxes"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    HorizontalAlignment="Stretch"
+    VerticalAlignment="Stretch"
+    mc:Ignorable="d">
+    <Canvas x:Name="labelCanvas" Margin="1" />
+    <Canvas
+        x:Name="chartCanvas"
+        Margin="21"
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch" />
 </Grid>
