--- a/Controls/Helicopter.xaml
+++ b/Controls/Helicopter.xaml
@@ -1,51 +1,66 @@
-﻿<UserControl x:Class="TeachingPlatformApp.Controls.Helicopter"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="1" d:DesignWidth="1">
+﻿<UserControl
+    x:Class="TeachingPlatformApp.Controls.Helicopter"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="1"
+    d:DesignWidth="1"
+    mc:Ignorable="d">
     <Grid>
-        <Canvas Margin="-10,-20,0,0" Grid.RowSpan="2">
+        <Canvas Grid.RowSpan="2" Margin="-10,-20,0,0">
             <Canvas.RenderTransform>
-                <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                <ScaleTransform ScaleX="0.5" ScaleY="0.5" />
             </Canvas.RenderTransform>
-            <Ellipse Fill="DodgerBlue"
-                     Width="20" 
-                     Height="100" 
-                     Canvas.Top="-20"
-                     Canvas.Left="10"
-                     Panel.ZIndex="0"
-                     x:Name="cllipse"/>
-            <Path x:Name="path1" Stroke="{Binding ElementName=cllipse, Path=Fill}" StrokeThickness="5">
+            <Ellipse
+                x:Name="cllipse"
+                Canvas.Left="10"
+                Canvas.Top="-20"
+                Width="20"
+                Height="100"
+                Panel.ZIndex="0"
+                Fill="DodgerBlue" />
+            <Path
+                x:Name="path1"
+                Stroke="{Binding ElementName=cllipse, Path=Fill}"
+                StrokeThickness="5">
                 <Path.Data>
-                    <LineGeometry StartPoint="20,25" EndPoint="55,70"/>
+                    <LineGeometry StartPoint="20,25" EndPoint="55,70" />
                 </Path.Data>
             </Path>
-            <Path x:Name="path2" Stroke="{Binding ElementName=cllipse, Path=Fill}" StrokeThickness="5">
+            <Path
+                x:Name="path2"
+                Stroke="{Binding ElementName=cllipse, Path=Fill}"
+                StrokeThickness="5">
                 <Path.Data>
-                    <LineGeometry StartPoint="20,25" EndPoint="55,-20"/>
+                    <LineGeometry StartPoint="20,25" EndPoint="55,-20" />
                 </Path.Data>
             </Path>
-            <Path x:Name="path3" Stroke="{Binding ElementName=cllipse, Path=Fill}" StrokeThickness="5">
+            <Path
+                x:Name="path3"
+                Stroke="{Binding ElementName=cllipse, Path=Fill}"
+                StrokeThickness="5">
                 <Path.Data>
-                    <LineGeometry StartPoint="20,25" EndPoint="-15,-20"/>
+                    <LineGeometry StartPoint="20,25" EndPoint="-15,-20" />
                 </Path.Data>
             </Path>
-            <Path x:Name="path4" Stroke="{Binding ElementName=cllipse, Path=Fill}" StrokeThickness="5">
+            <Path
+                x:Name="path4"
+                Stroke="{Binding ElementName=cllipse, Path=Fill}"
+                StrokeThickness="5">
                 <Path.Data>
-                    <LineGeometry StartPoint="20,25" EndPoint="-15,70"/>
+                    <LineGeometry StartPoint="20,25" EndPoint="-15,70" />
                 </Path.Data>
             </Path>
             <Path Stroke="{Binding ElementName=cllipse, Path=Fill}" StrokeThickness="5">
                 <Path.Data>
-                    <LineGeometry StartPoint="20,25" EndPoint="20,130"/>
+                    <LineGeometry StartPoint="20,25" EndPoint="20,130" />
                 </Path.Data>
             </Path>
             <Path Stroke="{Binding ElementName=cllipse, Path=Fill}" StrokeThickness="5">
                 <Path.Data>
-                    <LineGeometry StartPoint="0,95" EndPoint="40,95"/>
+                    <LineGeometry StartPoint="0,95" EndPoint="40,95" />
                 </Path.Data>
             </Path>
         </Canvas>
