--- a/Controls/Missile.xaml
+++ b/Controls/Missile.xaml
@@ -1,33 +1,48 @@
-﻿<UserControl x:Class="TeachingPlatformApp.Controls.Missile"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="1" d:DesignWidth="1">
+﻿<UserControl
+    x:Class="TeachingPlatformApp.Controls.Missile"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="1"
+    d:DesignWidth="1"
+    mc:Ignorable="d">
     <Grid>
-        <Canvas Margin="-8,-20,0,0" Grid.RowSpan="2">
+        <Canvas Grid.RowSpan="2" Margin="-8,-20,0,0">
             <Canvas.RenderTransform>
-                <ScaleTransform ScaleX="0.4" ScaleY="0.4"/>
+                <ScaleTransform ScaleX="0.4" ScaleY="0.4" />
             </Canvas.RenderTransform>
-            <Ellipse Fill="DodgerBlue"
-                     Width="20" 
-                     Height="20" 
-                     Canvas.Left="10"
-                     Panel.ZIndex="0"
-                     x:Name="cllipse"/>
-            <Path Stroke="DodgerBlue" StrokeThickness="1" Fill="DodgerBlue" Canvas.Left="10">
+            <Ellipse
+                x:Name="cllipse"
+                Canvas.Left="10"
+                Width="20"
+                Height="20"
+                Panel.ZIndex="0"
+                Fill="DodgerBlue" />
+            <Path
+                Canvas.Left="10"
+                Fill="DodgerBlue"
+                Stroke="DodgerBlue"
+                StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry Figures="M 0,10 L 20,10 20,90 0,90" />
                 </Path.Data>
             </Path>
-            <Path Stroke="DodgerBlue" StrokeThickness="1" Fill="DodgerBlue" Canvas.Left="10">
+            <Path
+                Canvas.Left="10"
+                Fill="DodgerBlue"
+                Stroke="DodgerBlue"
+                StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry Figures="M 0,50 L 20,50 35,70 -15,70" />
                 </Path.Data>
             </Path>
-            <Path Stroke="DodgerBlue" StrokeThickness="1" Fill="DodgerBlue" Canvas.Left="10">
+            <Path
+                Canvas.Left="10"
+                Fill="DodgerBlue"
+                Stroke="DodgerBlue"
+                StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry Figures="M 0,90 L 20,90 28,105 -8,105" />
                 </Path.Data>
