--- a/UIModels/TakeOffLandingView.xaml
+++ b/UIModels/TakeOffLandingView.xaml
@@ -25,14 +25,14 @@
             <RowDefinition Height="50" />
             <RowDefinition Height="50" />
             <RowDefinition Height="50" />
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <StackPanel
             Grid.Row="0"
             Margin="1"
             Orientation="Horizontal">
             <Label Content="飞行实验名称:" />
-            <Label Content="{Binding Name}" FontStyle="Italic"/>
+            <Label Content="{Binding Name}" FontStyle="Italic" />
         </StackPanel>
         <StackPanel
             Grid.Row="1"
@@ -40,19 +40,20 @@
             Orientation="Horizontal">
             <myctrls:Flighter Margin="25,22,13,0">
                 <myctrls:Flighter.RenderTransform>
-                    <ScaleTransform ScaleX="0.6" ScaleY="0.6"/>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.6" />
                 </myctrls:Flighter.RenderTransform>
             </myctrls:Flighter>
-            <Label Content="{Binding FlighterName}"/>
-            <Label Content=":"/>
-            <Label Content="坐标:" />
-            <Label Content="{Binding NowLocation, Converter={StaticResource PointToStringConverter}}" />
+            <Label Content="{Binding FlighterName}" />
+            <Label Content=":" />
+            <Label Content="经纬:" />
+            <Label Content="N39.82,E115.7" />
             <Label Content="滚转角:" />
-            <Label Content="{Binding Roll.Value}" />
+            <Label Content="1.2" />
             <Label Content="俯仰角:" />
-            <Label Content="{Binding Pitch.Value}" />
+            <Label Content="2.1" />
             <Label Content="偏航角:" />
-            <Label Content="{Binding Yaw.Value}" />
+            <Label Content="176.23" />
+            <Label Content="高度: 671.2m" />
         </StackPanel>
         <StackPanel
             Grid.Row="2"
@@ -60,20 +61,46 @@
             Orientation="Horizontal">
             <myctrls:Helicopter Margin="25,20,13,0">
                 <myctrls:Helicopter.RenderTransform>
-                    <ScaleTransform ScaleX="0.6" ScaleY="0.5"/>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.5" />
                 </myctrls:Helicopter.RenderTransform>
             </myctrls:Helicopter>
-            <Label Content="{Binding HelicopterName}"/>
-            <Label Content=":"/>
-            <Label Content="坐标:" />
-            <Label Content="{Binding SixPlatformNowLocation, Converter={StaticResource PointToStringConverter}}" />
+            <Label Content="{Binding HelicopterName}" />
+            <Label Content=":" />
+            <Label Content="经纬:" />
+            <Label Content="N40.14,E116.4" />
             <Label Content="滚转角:" />
-            <Label Content="{Binding SixPlatformRoll.Value}" />
+            <Label Content="6.7" />
             <Label Content="俯仰角:" />
-            <Label Content="{Binding SixPlatformPitch.Value}" />
+            <Label Content="34.2" />
             <Label Content="偏航角:" />
-            <Label Content="{Binding SixPlatformYaw.Value}" />
+            <Label Content="-123.2" />
+            <Label Content="高度: 714.5m" />
         </StackPanel>
+        <StackPanel
+            Grid.Row="3"
+            Margin="1"
+            Orientation="Horizontal">
+            <Label Content="飞行环境-" />
+            <Label Content="风速: " />
+            <myctrls:NumuricTextBlock
+                MinWidth="120"
+                VerticalContentAlignment="Center"
+                FontSize="22"
+                Text="2.3" />
+            <Label Content="气温: " />
+            <myctrls:NumuricTextBlock
+                MinWidth="120"
+                VerticalContentAlignment="Center"
+                FontSize="22"
+                Text="5.3" />
+            <Label Content="气压: " />
+            <myctrls:NumuricTextBlock
+                MinWidth="120"
+                VerticalContentAlignment="Center"
+                FontSize="22"
+                Text="1.0" />
+        </StackPanel>
+
         <!--<StackPanel
             Grid.Row="2"
             Margin="1"
