--- a/UIModels/HoverFligntView.xaml
+++ b/UIModels/HoverFligntView.xaml
@@ -5,8 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TeachingPlatformApp.UIModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:myctrls="clr-namespace:TeachingPlatformApp.Controls"
     xmlns:myconvers="clr-namespace:TeachingPlatformApp.Converters"
+    xmlns:myctrls="clr-namespace:TeachingPlatformApp.Controls"
     mc:Ignorable="d">
     <Grid.Background>
         <SolidColorBrush Color="White" />
@@ -25,14 +25,15 @@
             <RowDefinition Height="50" />
             <RowDefinition Height="50" />
             <RowDefinition Height="50" />
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <StackPanel
             Grid.Row="0"
             Margin="1"
             Orientation="Horizontal">
             <Label Content="飞行实验名称:" />
-            <Label Content="{Binding Name}" FontStyle="Italic"/>
+            <Label Content="{Binding Name}" FontStyle="Italic" />
         </StackPanel>
         <StackPanel
             Grid.Row="1"
@@ -40,11 +41,11 @@
             Orientation="Horizontal">
             <myctrls:Flighter Margin="25,22,13,0">
                 <myctrls:Flighter.RenderTransform>
-                    <ScaleTransform ScaleX="0.6" ScaleY="0.6"/>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.6" />
                 </myctrls:Flighter.RenderTransform>
             </myctrls:Flighter>
-            <Label Content="{Binding FlighterName}"/>
-            <Label Content=":"/>
+            <Label Content="{Binding FlighterName}" />
+            <Label Content=":" />
             <Label Content="坐标:" />
             <Label Content="{Binding NowLocation, Converter={StaticResource PointToStringConverter}}" />
             <Label Content="滚转角:" />
@@ -58,13 +59,33 @@
             Grid.Row="2"
             Margin="1"
             Orientation="Horizontal">
+            <myctrls:Flighter2 Margin="25,22,13,0">
+                <myctrls:Flighter2.RenderTransform>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.6" />
+                </myctrls:Flighter2.RenderTransform>
+            </myctrls:Flighter2>
+            <Label Content="{Binding Flighter2Name}" />
+            <Label Content=":" />
+            <Label Content="坐标:" />
+            <Label Content="{Binding Flighter2NowLocation, Converter={StaticResource PointToStringConverter}}" />
+            <Label Content="滚转角:" />
+            <Label Content="{Binding Roll2.Value}" />
+            <Label Content="俯仰角:" />
+            <Label Content="{Binding Pitch2.Value}" />
+            <Label Content="偏航角:" />
+            <Label Content="{Binding Yaw2.Value}" />
+        </StackPanel>
+        <StackPanel
+            Grid.Row="3"
+            Margin="1"
+            Orientation="Horizontal">
             <myctrls:Helicopter Margin="25,20,13,0">
                 <myctrls:Helicopter.RenderTransform>
-                    <ScaleTransform ScaleX="0.6" ScaleY="0.5"/>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.5" />
                 </myctrls:Helicopter.RenderTransform>
             </myctrls:Helicopter>
-            <Label Content="{Binding HelicopterName}"/>
-            <Label Content=":"/>
+            <Label Content="{Binding HelicopterName}" />
+            <Label Content=":" />
             <Label Content="坐标:" />
             <Label Content="{Binding SixPlatformNowLocation, Converter={StaticResource PointToStringConverter}}" />
             <Label Content="滚转角:" />
@@ -74,7 +95,7 @@
             <Label Content="偏航角:" />
             <Label Content="{Binding SixPlatformYaw.Value}" />
         </StackPanel>
-        <StackPanel Grid.Row="3" Orientation="Horizontal">
+        <StackPanel Grid.Row="4" Orientation="Horizontal">
             <Label Content="盘旋角度" />
             <myctrls:NumuricTextBlock
                 MinWidth="120"
