--- a/Views/OptionWindow.xaml
+++ b/Views/OptionWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="TeachingPlatformApp.Views.OptionWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TeachingPlatformApp.Views"
-        mc:Ignorable="d"
-        Title="OptionWindow" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
-</Window>
+﻿<Controls:MetroWindow
+    x:Class="TeachingPlatformApp.Views.OptionWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TeachingPlatformApp.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="参数设置"
+    Width="525"
+    Height="350"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
+    <Grid />
+</Controls:MetroWindow>
