Finish scale function.
Finish scale function.

--- a/Views/FlightMapWindow.xaml
+++ b/Views/FlightMapWindow.xaml
@@ -62,6 +62,7 @@
                     Panel.ZIndex="0">
                     <myctrls:Helicopter.RenderTransform>
                         <TransformGroup>
+                            <ScaleTransform ScaleX="1" ScaleY="1"/>
                             <RotateTransform Angle="{Binding Helicopter.Angle}" />
                         </TransformGroup>
                     </myctrls:Helicopter.RenderTransform>
@@ -75,6 +76,7 @@
                     Panel.ZIndex="0">
                     <myctrls:Flighter.RenderTransform>
                         <TransformGroup>
+                            <ScaleTransform ScaleX="1" ScaleY="1"/>
                             <RotateTransform Angle="{Binding Flighter.Angle}" />
                         </TransformGroup>
                     </myctrls:Flighter.RenderTransform>
@@ -88,6 +90,7 @@
                     Panel.ZIndex="0">
                     <myctrls:Flighter.RenderTransform>
                         <TransformGroup>
+                            <ScaleTransform ScaleX="1" ScaleY="1"/>
                             <RotateTransform Angle="{Binding Flighter2.Angle}" />
                         </TransformGroup>
                     </myctrls:Flighter.RenderTransform>
@@ -101,6 +104,7 @@
                     Panel.ZIndex="0">
                     <myctrls:Missile.RenderTransform>
                         <TransformGroup>
+                            <ScaleTransform ScaleX="1" ScaleY="1"/>
                             <RotateTransform Angle="{Binding Missile.Angle}" />
                         </TransformGroup>
                     </myctrls:Missile.RenderTransform>
