--- a/Views/OptionWindow.xaml
+++ b/Views/OptionWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:ctrls="clr-namespace:TeachingPlatformApp.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TeachingPlatformApp.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,5 +13,63 @@
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <Button
+            Width="75"
+            Margin="357,222,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="Button_Click"
+            Content="TEST" />
+        <ComboBox
+            x:Name="wswModelComboBox"
+            Width="120"
+            Margin="83,49,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" SelectionChanged="wswModelComboBox_SelectionChanged" />
+        <Label
+            Margin="10,10,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="初始坐标设置" />
+        <Label
+            Margin="13,49,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="模型选择" />
+        <ctrls:NumuricTextBlock
+            x:Name="xBlock"
+            Width="75"
+            Height="24"
+            Margin="231,51,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Text="10"
+            TextWrapping="Wrap" />
+        <ctrls:NumuricTextBlock
+            x:Name="yBlock"
+            Width="70"
+            Height="23"
+            Margin="346,51,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Text="10"
+            TextWrapping="Wrap" />
+        <Button
+            Width="75"
+            Margin="97,9,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="Set" Click="Button_Click_1" />
+        <Label
+            Margin="208,49,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="X" />
+        <Label
+            Margin="317,49,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="Y" RenderTransformOrigin="0.588,-0.859" />
+    </Grid>
 </Controls:MetroWindow>
